--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "git://github.com/yurine-graphics/timeshare.git"
   },
   "keywords": [
-    "share"
+    "timeshare"
   ],
   "author": "army8735",
   "license": "MIT",
